--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,8 +5,8 @@ import Navbar from "./Navbar.astro";
 
 ---
 
-<header class="max-h-1/6 sticky top-0 flex h-fit w-full flex-row flex-wrap items-center justify-center md:justify-between bg-primary/80 py-6 px-10 text-white z-50">
-<Logo className="max-h-12 w-fit"/>
+<header class="max-h-fit md:max-h-1/6 sm:sticky top-0 flex h-fit w-full flex-row flex-wrap items-center justify-center sm:justify-between sm:landscape:pr-16 bg-primary/80 py-6 px-10 text-white z-50">
+<Logo className="md:max-h-12 max-h-10 w-fit shrink"/>
 <Navbar />
 </header>
 
