--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,10 +3,9 @@ const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.slice(1);
 ---
 
-<nav id="menu" class="flex flex-wrap flex-row space-x-5 items-center mt-5 md:mt-0">
-  <a class={currentPath === "" ? "active " : "inactive"} href="/">Domů</a>
+<nav id="menu" class="flex flex-wrap flex-row space-x-5 items-center mt-5 sm:mt-0">
+    <a class={currentPath === "" ? "active " : "inactive"} href="/">Domů</a>
     <a class={currentPath === "o-projektu" ? "active " : "inactive"} href="/o-projektu">O projektu</a>
-    <a class={currentPath === "pamatky" ? "active " : "inactive"} href="/pamatky">Památky</a>
     <a class={currentPath === "partneri" ? "active " : "inactive"} href="/partneri">Partneři</a>
 </nav>
 
