--- a/src/components/PamatkyGrid.astro
+++ b/src/components/PamatkyGrid.astro
@@ -1,7 +1,5 @@
 ---
-import Card from "./Card.astro";
-
-const pamatky = (await Astro.glob('../pages/[lang]/pamatky/[trasa]/*.md')).sort(
+const pamatky = (await Astro.glob('../pages/pamatky/*.md')).sort(
     (a, b) => new Number(a.frontmatter.id).valueOf() - new Number(b.frontmatter.id).valueOf()
     );
 
@@ -10,17 +8,17 @@ const pamatky = (await Astro.glob('../pages/[lang]/pamatky/[trasa]/*.md')).sort(
 <section id="pamatky" class="z-10">
 <ul class="flex flex-wrap flex-auto items-stretch justify-evenly">
   { pamatky.map(pamatka =>(
-    <li id={pamatka.frontmatter.id} class="flex md:flex-row flex-col-reverse flex-nowrap md:space-x-7 md:space-y-0 bg-tertiary/25 px-3 md:px-7 py-3 rounded-md items-start justify-start flex-auto lg:basis-1/4 md:text-justify m-3">
+    <li id={pamatka.frontmatter.id} class="flex items-center justify-center md:flex-row flex-col-reverse flex-nowrap md:space-x-7 md:space-y-0 bg-tertiary/25 px-3 md:px-7 py-5 rounded-md md:items-start md:justify-start flex-auto lg:basis-1/3 md:text-justify m-3">
       {pamatka.frontmatter.image &&
         <img class="md:max-w-[40%] place-self-center" src={pamatka.frontmatter.image} alt={pamatka.frontmatter.title} />
       }
         <div class="flex flex-col flex-wrap justify-start items-start">
-          <a href={`${pamatka.frontmatter.lang}/pamatky/${pamatka.frontmatter.trasa}/${pamatka.frontmatter.slug}`}>
+          <a href={pamatka.url}>
             <h3 class="">{pamatka.frontmatter.id}. {pamatka.frontmatter.title}</h3>
           </a>
           <hr />
           <p>{pamatka.frontmatter.excerpt}</p>
-          <a class="p-3 bg-quarternary text-secondary md:mt-3 rounded-md hover:scale-105 transition-all ease-in-out my-3 md:my-0" href={`${pamatka.frontmatter.lang}/pamatky/${pamatka.frontmatter.trasa}/${pamatka.frontmatter.slug}`}>Zobrazit památku</a>
+          <a class="p-3 bg-quarternary text-secondary md:mt-3 rounded-md hover:scale-105 transition-all ease-in-out my-3 md:my-0" href={pamatka.url}>Zobrazit památku</a>
           </div>
       </li>
 
