modified:   src/layouts/PamatkaSingleLayout.astro 	modified:   src/pages/pamatky/1-vila-benedikta-schrolla.md 	modified:   src/pages/pamatky/10-strelnice-chlapecka-skola-kostel-sv-petra-a-pavla.md 	modified:   src/pages/pamatky/11-lachneruv-dum.md 	modified:   src/pages/pamatky/12-park-alejka.md 	modified:   src/pages/pamatky/13-vila-oskara-nowotneho.md 	modified:   src/pages/pamatky/14-vila-roberta-stowassera.md 	modified:   src/pages/pamatky/15-vila-josefa-hollmana.md 	modified:   src/pages/pamatky/16-vila-socialni-vybavenosti-firmy-herman-pollack-a-synove.md 	modified:   src/pages/pamatky/17-klasterni-zahrada.md 	modified:   src/pages/pamatky/18-kaiserstrasse.md 	modified:   src/pages/pamatky/2-vila-augusta-schrolla.md 	modified:   src/pages/pamatky/3-vila-margot-rosslerove.md 	modified:   src/pages/pamatky/4-vila-josefa-kaulicha.md 	modified:   src/pages/pamatky/5-vila-franze-scholze.md 	modified:   src/pages/pamatky/6-vila-colestina-klemta.md 	modified:   src/pages/pamatky/7-vila-josefa-dimtera.md 	modified:   src/pages/pamatky/8-langer-schrollova-vila.md 	modified:   src/pages/pamatky/9-vila-josefa-edlera-von-schrolla.md 	modified:   src/pages/pamatky/[...page].astro 	new file:   src/utils/helpers.js

--- a/src/layouts/PamatkaSingleLayout.astro
+++ b/src/layouts/PamatkaSingleLayout.astro
@@ -1,10 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
+import { generateCategoryData } from "../utils/helpers.js";
 import Card from "../components/Card.astro";
 
 
 const { frontmatter } = Astro.props;
+
+const allCategoriesData = generateCategoryData(frontmatter.categories);
+console.log(allCategoriesData);
 ---
 <Layout title={frontmatter.title}>
 
@@ -14,7 +17,7 @@ const { frontmatter } = Astro.props;
         <img class="md:max-w-[40%] h-auto aspect-auto md:mr-5 mt-5 md:mt-0 flex-auto" src={frontmatter.image} alt={frontmatter.title} />
         }
       <Card>
-        <article class="flex flex-col text-left md:text-justify justify-start items-start space-y-4">
+        <article class="inline-block text-left md:text-justify justify-start items-start space-y-4">
           <h1 class="lg:leading-loose leading-relaxed mb-3">{frontmatter.id}. {frontmatter.title}</h1>
           <slot />
         </article>
