--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ export interface Props {
 	title: string;
 }
 
+import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 
@@ -10,14 +11,8 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="min-h-screen min-w-screen">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
+<html lang="cs" class="min-h-screen min-w-screen">
+  <BaseHead title={title}/>
 	<body class="h-full flex flex-wrap justify-between bg-primary text-secondary">
     <Header />
     <main id="content" class="lg:p-16 p-3 flex-wrap flex justify-center items-center h-full w-full">
@@ -35,10 +30,12 @@ const { title } = Astro.props;
 html {
   font-family: 'Lato';
   font-weight: 400;
+  scroll-behavior: smooth;
 }
 
 body {
-  background: top / cover border-box no-repeat url(../assets/bg/index/linky-bg.svg);
+  background: center / cover border-box no-repeat url(../assets/img/linky-bg.svg);
+  background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -48,12 +45,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  @apply text-3xl text-quarternary;
+  @apply text-3xl text-secondary;
   font-weight: 700;
 }
 
 h2 {
-  @apply text-2xl text-quarternary;
+  @apply text-2xl text-secondary;
   font-weight: 700;
 }
 
@@ -64,5 +61,9 @@ h3 {
 p {
   font-family: 'Lato';
   font-weight: 400;
+}
+
+.btn {
+  @apply py-3 px-5 bg-quarternary text-white font-bold hover:bg-quarternary/90 rounded-md transition-all ease-in-out
 }
 </style>
