Pre-Prod Final Site Build

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,15 +1,18 @@
 ---
 export interface Props {
   title: string,
+  description: string,
 }
 
-const {title} = Astro.props;
+const {title, description} = Astro.props;
 ---
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+  <meta name="description" content={description} />
   <meta name="generator" content={Astro.generator} />
+  <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <title>{title}</title>
 </head>
