--- a/src/pages/o-projektu.astro
+++ b/src/pages/o-projektu.astro
@@ -1,7 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+const description = ""
 ---
-<Layout title="O projektu">
+<Layout title="O projektu" description={description}>
 <h1>O projektu</h1>
 </Layout>
