--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,4 +1,11 @@
-<div class="flex flex-col flex-wrap bg-tertiary/25 p-5 rounded-md items-start justify-start flex-auto text-justify">
+---
+export interface Props {
+  className?: string;
+}
+
+const { className } = Astro.props;
+---
+<div class={`card ${className}`}>
   <slot/>
 </div>
 
