Changes to be committed: 	renamed:    public/images/1.png -> src/assets/img/pamatky/1.png 	renamed:    public/images/10.png -> src/assets/img/pamatky/10.png 	renamed:    public/images/11.png -> src/assets/img/pamatky/11.png 	renamed:    public/images/12.png -> src/assets/img/pamatky/12.png 	renamed:    public/images/13.png -> src/assets/img/pamatky/13.png 	renamed:    public/images/14.png -> src/assets/img/pamatky/14.png 	renamed:    public/images/15.png -> src/assets/img/pamatky/15.png 	renamed:    public/images/16.png -> src/assets/img/pamatky/16.png 	renamed:    public/images/17.1.png -> src/assets/img/pamatky/17.1.png 	renamed:    public/images/17.png -> src/assets/img/pamatky/17.png 	renamed:    public/images/18.png -> src/assets/img/pamatky/18.png 	renamed:    public/images/2.png -> src/assets/img/pamatky/2.png 	renamed:    public/images/3.png -> src/assets/img/pamatky/3.png 	renamed:    public/images/4.png -> src/assets/img/pamatky/4.png 	renamed:    public/images/5.png -> src/assets/img/pamatky/5.png 	renamed:    public/images/6.png -> src/assets/img/pamatky/6.png 	renamed:    public/images/7.png -> src/assets/img/pamatky/7.png 	renamed:    public/images/8.png -> src/assets/img/pamatky/8.png 	renamed:    public/images/9.png -> src/assets/img/pamatky/9.png 	modified:   src/components/PamatkyGrid.astro 	modified:   src/layouts/PamatkaSingleLayout.astro 	modified:   src/pages/404.astro 	modified:   src/pages/pamatky/trasa-a/1-vila-benedikta-schrolla.md 	modified:   src/pages/pamatky/trasa-a/10-strelnice-chlapecka-skola-kostel-sv-petra-a-pavla.md 	modified:   src/pages/pamatky/trasa-a/11-lachneruv-dum.md 	modified:   src/pages/pamatky/trasa-a/12-park-alejka.md 	modified:   src/pages/pamatky/trasa-a/13-vila-oskara-nowotneho.md 	modified:   src/pages/pamatky/trasa-a/14-vila-roberta-stowassera.md 	modified:   src/pages/pamatky/trasa-a/15-vila-josefa-hollmana.md 	modified:   src/pages/pamatky/trasa-a/16-vila-socialni-vybavenosti-firmy-herman-pollack-a-synove.md 	mod

--- a/src/layouts/PamatkaSingleLayout.astro
+++ b/src/layouts/PamatkaSingleLayout.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import BlobSingle from "../components/BlobSingle.astro";
+import { Image } from "@astrojs/image/components";
 
 const { page, frontmatter } = Astro.props;
 ---
@@ -24,7 +25,7 @@ const { page, frontmatter } = Astro.props;
         <a class="btn my-7 md:mt-10 w-full text-center z-auto hidden md:block" href={`/#${frontmatter.trasa}-${frontmatter.id}`}>Zpět</a>
       </div>
       {frontmatter.image &&
-        <img class="md:max-h-[700px] md:mr-5 mt-3 md:mt-0 flex-auto rounded-sm md:px-5 md:place-self-center" src={frontmatter.image} alt={frontmatter.title} />
+        <Image class="md:max-h-[700px] md:mr-5 mt-3 md:mt-0 flex-auto rounded-sm md:px-5 md:place-self-center" src={import (`${frontmatter.image}`)} alt={frontmatter.title} />
         }
     <a class="btn my-7 md:mt-10 w-full text-center z-auto md:hidden" href={`/#${frontmatter.trasa}-${frontmatter.id}`}>Zpět</a>
     </section>
