--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+const description = "404 - Stránka Nenalezena"
 ---
 
-<Layout title="Průvodce Broumovem">
+<Layout title="Průvodce Broumovem" description={description}>
 
 <h1>404</h1>
 <p>Stránka nenalezena</p>
