--- a/src/components/PamatkyGrid.astro
+++ b/src/components/PamatkyGrid.astro
@@ -27,7 +27,7 @@ const trasaB = (await Astro.glob('../pages/pamatky/trasa-b/*.md')).sort(
                 <BlobSingle id={pamatka.frontmatter.id} className="transition-all" />
               </div>
               {pamatka.frontmatter.image &&
-                <Image class="md:max-w-[50%] place-self-center sm:landscape:max-w-[30%] rounded-sm" src={import (`${pamatka.frontmatter.image}`)} alt={pamatka.frontmatter.title} /> }
+                <Image class="md:max-w-[50%] place-self-center sm:landscape:max-w-[30%] rounded-sm" src={import (`../assets/img/pamatky/${pamatka.frontmatter.image}.png`)} alt={pamatka.frontmatter.title} /> }
                 <div class="flex flex-col flex-wrap justify-start items-start">
                   <a href={pamatka.url}>
                     <h3 class="font-bold text-primary bg-tertiary px-4 py-3 leading-relaxed text-left rounded-sm">{pamatka.frontmatter.title}</h3>
@@ -40,14 +40,14 @@ const trasaB = (await Astro.glob('../pages/pamatky/trasa-b/*.md')).sort(
           ))}
         </ul>
         <!-- Trasa B List -->
-        <ul x-cloak x-show="trasa === 'Trasa B'" class="flex flex-wrap flex-auto items-stretch justify-evenly transition-all ease-in-out mt-3">
+         <ul x-cloak x-show="trasa === 'Trasa B'" class="flex flex-wrap flex-auto items-stretch justify-evenly transition-all ease-in-out mt-3">
           {trasaB.map(pamatka =>(
             <li id={`${pamatka.frontmatter.trasa}-${pamatka.frontmatter.id}`} class="flex items-start justify-evenly bg-secondary text-[#313131] md:flex-row flex-col-reverse sm:landscape:flex-row flex-nowrap sm:landscape:space-x-5 md:space-x-7 md:space-y-0 px-3 md:px-7 py-3 rounded-sm md:items-start md:justify-start flex-auto md:basis-full lg:basis-1/3 md:text-justify m-3 scroll-m-28">
               <div id="idBlob" class="hidden md:block md:absolute md:scale-[30%] md:-translate-y-[40%] md:-translate-x-[45%] -rotate-12 z-50">
                 <BlobSingle id={pamatka.frontmatter.id} className="transition-all" />
               </div>
               {pamatka.frontmatter.image &&
-                <Image class="md:max-w-[50%] place-self-center sm:landscape:max-w-[30%] rounded-sm" src={import (`${pamatka.frontmatter.image}`)} alt={pamatka.frontmatter.title} /> }
+                <Image class="md:max-w-[50%] place-self-center sm:landscape:max-w-[30%] rounded-sm" src={import (`../assets/img/pamatky/${pamatka.frontmatter.image}.png`)} alt={pamatka.frontmatter.title} /> }
                 <div class="flex flex-col flex-wrap justify-start items-start">
                   <a href={pamatka.url}>
                     <h3 class="font-bold text-primary bg-tertiary px-4 py-3 leading-relaxed text-left rounded-sm"><span class="text-3xl md:hidden">{pamatka.frontmatter.id}.</span> {pamatka.frontmatter.title}</h3>
@@ -59,6 +59,7 @@ const trasaB = (await Astro.glob('../pages/pamatky/trasa-b/*.md')).sort(
              </li>
           ))}
         </ul>
+
 </section>
 
 <style>
