--- a/src/layouts/PamatkaSingleLayout.astro
+++ b/src/layouts/PamatkaSingleLayout.astro
@@ -25,7 +25,7 @@ const { page, frontmatter } = Astro.props;
         <a class="btn my-7 md:mt-10 w-full text-center z-auto hidden md:block" href={`/#${frontmatter.trasa}-${frontmatter.id}`}>Zpět</a>
       </div>
       {frontmatter.image &&
-        <Image class="md:max-h-[700px] md:mr-5 mt-3 md:mt-0 flex-auto rounded-sm md:px-5 md:place-self-center" src={import (`${frontmatter.image}`)} alt={frontmatter.title} />
+        <Image class="md:max-h-[700px] md:mr-5 mt-3 md:mt-0 flex-auto rounded-sm md:px-5 md:place-self-center" src={import (`../assets/img/pamatky/${frontmatter.image}.png`)} alt={frontmatter.title} />
         }
     <a class="btn my-7 md:mt-10 w-full text-center z-auto md:hidden" href={`/#${frontmatter.trasa}-${frontmatter.id}`}>Zpět</a>
     </section>
