Changes to be committed: 	deleted:    src/assets/img/pamatky/1.png 	new file:   src/assets/img/pamatky/1.webp 	deleted:    src/assets/img/pamatky/10.png 	new file:   src/assets/img/pamatky/10.webp 	deleted:    src/assets/img/pamatky/11.png 	new file:   src/assets/img/pamatky/11.webp 	deleted:    src/assets/img/pamatky/12.png 	new file:   src/assets/img/pamatky/12.webp 	deleted:    src/assets/img/pamatky/13.png 	new file:   src/assets/img/pamatky/13.webp 	deleted:    src/assets/img/pamatky/14.png 	new file:   src/assets/img/pamatky/14.webp 	deleted:    src/assets/img/pamatky/15.png 	new file:   src/assets/img/pamatky/15.webp 	deleted:    src/assets/img/pamatky/16.png 	new file:   src/assets/img/pamatky/16.webp 	deleted:    src/assets/img/pamatky/17.1.png 	new file:   src/assets/img/pamatky/17.1.webp 	deleted:    src/assets/img/pamatky/17.png 	new file:   src/assets/img/pamatky/17.webp 	deleted:    src/assets/img/pamatky/18.png 	new file:   src/assets/img/pamatky/18.webp 	deleted:    src/assets/img/pamatky/2.png 	new file:   src/assets/img/pamatky/2.webp 	deleted:    src/assets/img/pamatky/3.png 	new file:   src/assets/img/pamatky/3.webp 	deleted:    src/assets/img/pamatky/4.png 	new file:   src/assets/img/pamatky/4.webp 	deleted:    src/assets/img/pamatky/5.png 	new file:   src/assets/img/pamatky/5.webp 	deleted:    src/assets/img/pamatky/6.png 	new file:   src/assets/img/pamatky/6.webp 	deleted:    src/assets/img/pamatky/7.png 	new file:   src/assets/img/pamatky/7.webp 	deleted:    src/assets/img/pamatky/8.png 	new file:   src/assets/img/pamatky/8.webp 	deleted:    src/assets/img/pamatky/9.png 	new file:   src/assets/img/pamatky/9.webp 	modified:   src/components/PamatkyGrid.astro 	modified:   src/layouts/PamatkaSingleLayout.astro 	modified:   src/pages/index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const description = "Přijmete pozvánku na procházku Broumovem s nostalgickou 
   </section>
 
   <section class="flex-auto basis-1/6 -z-10" >
-    <Picture  src={IndexBlobs} widths={[400, 500, 600]} aspectRatio={"1143:1255"} alt="" sizes="(max-width: 100%)" formats={['webp', 'avif', 'png']} />
+    <Picture  src={IndexBlobs} widths={[400, 500, 600]} aspectRatio={"1143:1255"} alt="" sizes="(max-width: 2048px)" formats={['webp', 'avif', 'png']} />
   </section>
 </div>
 
