Added metadata for socials, favicon vars

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const { title, description } = Astro.props;
   @import url("https://use.typekit.net/csa2fon.css");
 
 html {
-  font-family: 'Lato';
+  font-family: 'lato'!important;
   font-weight: 400;
   @apply scroll-smooth motion-reduce:scroll-auto;
 }
@@ -44,7 +44,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   @apply leading-loose mt-4;
- font-family: 'Lato';
+ font-family: 'lato';
 
 }
 
@@ -63,7 +63,7 @@ h3 {
 }
 
 p {
-  font-family: 'Lato';
+  font-family: 'lato';
   font-weight: 400;
 }
 
