--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import PamatkyGrid from '../components/PamatkyGrid.astro';
-import IndexBlobs from '../assets/img/indexBlobs.png'
+import IndexBlobs from '../assets/img/indexBlobs.png';
 import { Picture } from '@astrojs/image/components';
 
 const description = "Přijmete pozvánku na procházku Broumovem s nostalgickou vzpomínkou na jeho podobu z přelomu 19. a 20. století."
