--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,4 +1,5 @@
 ---
+import metaImg from '../../public/metaImg.png';
 export interface Props {
   title: string,
   description: string,
@@ -12,7 +13,25 @@ const {title, description} = Astro.props;
   <meta name="viewport" content="width=device-width" />
   <meta name="description" content={description} />
   <meta name="generator" content={Astro.generator} />
-  <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#181e7e">
+  <meta name="msapplication-TileColor" content="#e7511d">
+  <meta name="theme-color" content="#ffffff">
+  <!-- Meta for Social -->
+  <meta name="image" content="Přijměte pozvánku na procházku Broumovem s nostalgickou vzpomínkou na jeho podobu z přelomu 19. a 20. století.">
+  <!-- Schema.org for Google -->
+  <meta itemprop="name" content="Průvodce Broumovem">
+  <meta itemprop="image" content="Přijměte pozvánku na procházku Broumovem s nostalgickou vzpomínkou na jeho podobu z přelomu 19. a 20. století.">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Průvodce Broumovem">
+  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+  <meta name="og:title" content="Průvodce Broumovem">
+  <meta name="og:image" content={metaImg}>
+  <meta name="og:locale" content="cs_CZ">
+  <meta name="og:type" content="website">
   <title>{title}</title>
 </head>
